--- a/KinectColor_Depth/KinectColor_Depth.vcxproj
+++ b/KinectColor_Depth/KinectColor_Depth.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="main2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
