增加了图像匹配,好像没有对齐

--- a/KinectColor_Depth/KinectColor_Depth.vcxproj.filters
+++ b/KinectColor_Depth/KinectColor_Depth.vcxproj.filters
@@ -2,9 +2,12 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="AxPairwiseRegistration.h" />
+    <ClInclude Include="Camera_Intrinsic_Parameters.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="main2.cpp" />
+    <ClCompile Include="AxPairwiseRegistration.cpp" />
+    <ClCompile Include="AxRGBDSLAM.cpp" />
+    <ClCompile Include="plan1.cpp" />
   </ItemGroup>
 </Project>
